# egt-launcher

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  _config.h.in  configure.ac  example.xml  launch.sh  taglines.txt
src/: launcher.cpp
